created script for env docker done.

--- a/Docker/Env/pgadmin-variables.env
+++ b/Docker/Env/pgadmin-variables.env
@@ -1,5 +1,4 @@
-PGADMIN_DEFAULT_EMAIL=bengt@bengan.com
-PGADMIN_DEFAULT_PASSWORD=bengan
+PGADMIN_DEFAULT_EMAIL=.
+PGADMIN_DEFAULT_PASSWORD=.
 PGADMIN_LISTEN_ADDRESS=0.0.0.0
 PGADMIN_LISTEN_PORT=80
-
