--- a/Docker/Z-Nginx/nginx.conf
+++ b/Docker/Z-Nginx/nginx.conf
@@ -61,15 +61,15 @@ http {
             #127.0.0.11 internal Docker DNS.
             resolver 127.0.0.11 valid=10s ipv6=off;
             #resolver_timeout 5s;
-            set $pgadmin z-pgadmin:80;
+            set $pgadmin "z-pgadmin:80";
             #proxy_pass http://localhost:8003;
             proxy_pass http://$pgadmin;
             #proxy_redirect off;
             proxy_http_version 1.1;
-           proxy_set_header Host               $host;
-           proxy_set_header X-Real-IP          $remote_addr;
-           proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
-           proxy_set_header X-Forwarded-Proto  $scheme;
+            proxy_set_header Host               $host;
+            proxy_set_header X-Real-IP          $remote_addr;
+            proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto  $scheme;
         }
     }
 
