working with preloaded example db in z-postgres docker image.

--- a/Docker/project-z-compose.yaml
+++ b/Docker/project-z-compose.yaml
@@ -2,11 +2,11 @@
 version: "3"
 services:
  z-ubuntu:
-  image: ubuntu
+  image: z-ubuntu
   networks:
    - z-net
  z-postgres:
-  image: postgres
+  image: z-postgres
   networks:
    - z-net
   ports:
