--- a/Docker/Z-Images/Z-Ubuntu/Dockerfile
+++ b/Docker/Z-Images/Z-Ubuntu/Dockerfile
@@ -2,5 +2,5 @@ FROM ubuntu
 RUN apt-get update
 RUN apt-get install -y iputils-ping
 RUN apt-get install -y dnsutils
-ENTRYPOINT ["/bin/sh"]
+ENTRYPOINT ["/bin/bash"]
 
