postgres info and sql files

--- a/Docker/Z-Images/Z-Postgres/Dockerfile
+++ b/Docker/Z-Images/Z-Postgres/Dockerfile
@@ -1,4 +1,5 @@
 FROM postgres
-ENV POSTGRES_DB my_db
-COPY my_db_bak.sql /docker-entrypoint-initdb.d/
+ENV POSTGRES_DB postgres
+COPY dvdrental_bak.sql /docker-entrypoint-initdb.d/
+COPY mme_bak.sql /docker-entrypoint-initdb.d/
 
