--- a/Docker/Z-Images/Z-Nginx/nginx.conf
+++ b/Docker/Z-Images/Z-Nginx/nginx.conf
@@ -72,4 +72,19 @@ http {
         }
     }
 
+    server {
+        listen 80;
+        server_name superset.local 127.0.0.4;
+
+        location / {
+            #127.0.0.11 internal Docker DNS.
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $superset "z-superset:8088";
+            proxy_pass http://$superset;
+
+            proxy_http_version 1.1;
+            proxy_set_header Host               $host;
+        }
+    }
+
 }
