--- a/Docker/project-z-compose.yaml
+++ b/Docker/project-z-compose.yaml
@@ -25,6 +25,14 @@ services:
    - Env/pgadmin-variables.env
   volumes:
    - project-z-pgadmin:/var/lib/pgadmin
+ z-superset:
+  image: z-superset
+  networks:
+   - z-net
+  ports:
+   - 8004:8088
+  volumes:
+   - project-z-superset:/var/lib/superset
  z-nginx:
   image: z-nginx
   networks:
@@ -38,4 +46,6 @@ volumes:
  project-z-pgdata:
   driver: local
  project-z-pgadmin:
+  driver: local
+ project-z-superset:
   driver: local
