changed volume name.

--- a/Docker/project-z-compose.yaml
+++ b/Docker/project-z-compose.yaml
@@ -14,7 +14,7 @@ services:
   env_file:
    - Env/postgres-variables.env
   volumes:
-   - project-z-pgdata:/var/lib/postgresql/data
+   - project-z-pgdata:/var/lib/zpostgresql/data
  z-pgadmin:
   image: z-pgadmin
   networks:
@@ -24,7 +24,7 @@ services:
   env_file:
    - Env/pgadmin-variables.env
   volumes:
-   - project-z-pgadmin:/var/lib/pgadmin
+   - project-z-pgadmin:/var/lib/zpgadmin
  z-superset:
   image: z-superset
   networks:
@@ -32,7 +32,7 @@ services:
   ports:
    - 8004:8088
   volumes:
-   - project-z-superset:/var/lib/superset
+   - project-z-superset:/var/lib/zsuperset
  z-nginx:
   image: z-nginx
   networks:
