--- a/Docker/project-z-compose.yaml
+++ b/Docker/project-z-compose.yaml
@@ -14,7 +14,7 @@ services:
   env_file:
    - Env/postgres-variables.env
   volumes:
-   - project-z-pgdata:/var/lib/zpostgresql/data
+   - project-z-pgdata:/var/lib/postgresql/data
  z-pgadmin:
   image: z-pgadmin
   networks:
@@ -24,7 +24,7 @@ services:
   env_file:
    - Env/pgadmin-variables.env
   volumes:
-   - project-z-pgadmin:/var/lib/zpgadmin
+   - project-z-pgadmin:/var/lib/pgadmin
  z-superset:
   image: z-superset
   networks:
@@ -32,7 +32,7 @@ services:
   ports:
    - 8004:8088
   volumes:
-   - project-z-superset:/var/lib/zsuperset
+   - project-z-superset:/var/lib/superset
  z-nginx:
   image: z-nginx
   networks:
@@ -41,6 +41,7 @@ services:
    - 80:80
 networks:
  z-net:
+  name: z-net
   driver: bridge
 volumes:
  project-z-pgdata:
