--- a/Docker/project-y-etl-compose.yaml
+++ b/Docker/project-y-etl-compose.yaml
@@ -1,48 +1,22 @@
 ---
 version: "3"
 services:
- z-postgres:
-  image: z-postgres
-  networks:
-   - z-net
+ y-mysql:
+  image: y-mysql
   ports:
-   - 5432:5432
+   - 3306:3306
   env_file:
-   - Env/postgres-variables.env
+   - Env/mysql-variables.env
   volumes:
-   - project-z-pgdata:/var/lib/postgresql/data
- z-pgadmin:
-  image: z-pgadmin
-  networks:
-   - z-net
+   - project-y-mysql:/var/lib/mysql
+ y-adminer:
+  image: y-adminer
   ports:
-   - 8003:80
-  env_file:
-   - Env/pgadmin-variables.env
-  volumes:
-   - project-z-pgadmin:/var/lib/pgadmin
- z-superset:
-  image: z-superset
-  networks:
-   - z-net
-  ports:
-   - 8004:8088
-  volumes:
-   - project-z-superset:/var/lib/superset
- z-nginx:
-  image: z-nginx
-  networks:
-   - z-net
-  ports:
-   - 80:80
+   - 8005:8080
 networks:
- z-net:
-  name: z-net
-  driver: bridge
+  default:
+    external:
+      name: z-net
 volumes:
- project-z-pgdata:
-  driver: local
- project-z-pgadmin:
-  driver: local
- project-z-superset:
+ project-y-mysql:
   driver: local
