--- a/Docker/Z-Images/Z-Nginx/nginx.conf
+++ b/Docker/Z-Images/Z-Nginx/nginx.conf
@@ -87,4 +87,17 @@ http {
         }
     }
 
+    server {
+        listen 80;
+        server_name adminer.local 127.0.0.5;
+        location / {
+            #127.0.0.11 internal Docker DNS.
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $adminer "y-adminer:8080";
+            proxy_pass http://$adminer;
+            proxy_http_version 1.1;
+            proxy_set_header Host    $host;
+        }
+    }
+
 }
