added airbyte, but no nginx config yet.

--- a/Docker/Z-Images/Y-Airbyte/docker-compose.yaml
+++ b/Docker/Z-Images/Y-Airbyte/docker-compose.yaml
@@ -204,3 +204,7 @@ volumes:
     name: ${DATA_DOCKER_MOUNT}
   db:
     name: ${DB_DOCKER_MOUNT}
+networks:
+  default:
+    external:
+      name: z-net
