--- a/GUI/Json/nginx.json
+++ b/GUI/Json/nginx.json
@@ -2,7 +2,7 @@
     "id": 1,
     "name": "NGINX",
     "description": "Reverse proxy for Project-Y. Used to create server blocks (virtual servers). If Nginx is down, you must access each resource in the format 'localhost:<port#>'.",
-    "runCmd": "todo",
+    "runCmd": "docker ",
     "stopCmd": "todo",
     "buildCmd": "todo",
     "access": ["localhost", "nginx.local"],
