--- a/GUI/Json/nginx.json
+++ b/GUI/Json/nginx.json
@@ -2,7 +2,7 @@
     "id": 1,
     "name": "NGINX",
     "description": "Nginx is a reverse proxy for Project-Y. It's used to create server blocks (virtual servers). If Nginx is down, you must access each resource in the format 'localhost:<port#>'.",
-    "imageName": ["z-nginx"],
+    "imageName": ["y-nginx"],
     "runCmd": "docker ",
     "stopCmd": "todo",
     "buildCmd": "docker build -t y-nginx ../Docker/Y-Images/Y-Nginx\\ /",
