status check works fine.

--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -42,7 +42,7 @@ http {
 
     server {
         listen 80;
-        server_name static.local 127.0.0.2;
+        server_name nginx-static.local 127.0.0.2;
 
         location / {
             root /data/www/StaticWebPageExample;
