--- a/GUI/Json/nginx.json
+++ b/GUI/Json/nginx.json
@@ -3,7 +3,7 @@
     "name": "NGINX",
     "description": "Nginx is a reverse proxy for Project-Y. It's used to create server blocks (virtual servers). If Nginx is down, you must access each resource in the format 'localhost:<port#>'.",
     "imageName": ["y-nginx"],
-    "runCmd": "docker run -p 80:80 --name y-nginx --rm -d y-nginx",
+    "runCmd": "docker run -p 80:80 --network=y-net --name y-nginx --rm -d y-nginx",
     "stopCmd": "docker stop y-nginx",
     "buildCmd": "docker build -t y-nginx ../Docker/Y-Images/Y-Nginx\\ /",
     "access": [{"127.0.0.1": "localhost defaults to nginx start page."},
