port pgadmin to y structure. can run nginx and pgadmin seperately.

--- a/Docker/Env/pgadmin-variables.env.example
+++ b/Docker/Env/pgadmin-variables.env.example
@@ -1,4 +1,4 @@
-PGADMIN_DEFAULT_EMAIL=<my@email.local>
+PGADMIN_DEFAULT_EMAIL=<my@example.com>
 PGADMIN_DEFAULT_PASSWORD=<my_secret_password>
 PGADMIN_LISTEN_ADDRESS=0.0.0.0
 PGADMIN_LISTEN_PORT=80
