--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -50,7 +50,7 @@ http {
     }
     
     #upstream pgadmin {
-        #server z-pgadmin:80;
+        #server y-pgadmin:80;
     #}
     server {
         listen 80;
@@ -60,7 +60,7 @@ http {
             #127.0.0.11 internal Docker DNS.
             resolver 127.0.0.11 valid=10s ipv6=off;
             #resolver_timeout 5s;
-            set $pgadmin "z-pgadmin:80";
+            set $pgadmin "y-pgadmin:80";
             #proxy_pass http://localhost:8003;
             proxy_pass http://$pgadmin;
             #proxy_redirect off;
