--- a/Docker/y-compose-postgres-pgadmin.yaml
+++ b/Docker/y-compose-postgres-pgadmin.yaml
@@ -1,6 +1,17 @@
 ---
 version: "3"
 services:
+  y-postgres:
+    build: ./Y-Images/Y-Postgres
+    image: y-postgres
+    networks:
+      - y-net
+    ports:
+      - 5432:5432
+    env_file:
+      - Env/postgres-variables.env
+    volumes:
+      - project-y-pgdata:/var/lib/postgresql/data
   y-pgadmin:
     build: ./Y-Images/Y-Pgadmin
     image: y-pgadmin
@@ -17,5 +28,7 @@ networks:
     external:
       name: y-net
 volumes:
+  project-y-pgdata:
+    driver: local
   project-y-pgadmin:
     driver: local
