--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -79,7 +79,7 @@ http {
         location / {
             #127.0.0.11 internal Docker DNS.
             resolver 127.0.0.11 valid=10s ipv6=off;
-            set $superset "z-superset:8088";
+            set $superset "y-superset:8088";
             proxy_pass http://$superset;
 
             proxy_http_version 1.1;
