--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -100,4 +100,17 @@ http {
         }
     }
 
+    server {
+        listen 80;
+        server_name airflow.local 127.0.0.6;
+        location / {
+            #127.0.0.11 internal Docker DNS.
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $airflow "airflow-webserver:8080";
+            proxy_pass http://$airflow;
+            proxy_http_version 1.1;
+            proxy_set_header Host    $host;
+        }
+    }
+
 }
