--- a/GUI/Json/nginx.json
+++ b/GUI/Json/nginx.json
@@ -3,6 +3,7 @@
     "name": "NGINX",
     "description": "Nginx is a reverse proxy for Project-Y. It's used to create server blocks (virtual servers). If Nginx is down, you must access each resource in the format 'localhost:<port#>'.",
     "imageName": ["y-nginx"],
+    "buildNeeded": true,
     "runCmd": "docker run -p 80:80 --network=y-net --name y-nginx --rm -d y-nginx",
     "stopCmd": "docker stop y-nginx",
     "buildCmd": "docker build --rm -t y-nginx ../Docker/Y-Images/Y-Nginx\\ /",
