--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -113,4 +113,17 @@ http {
         }
     }
 
+    server {
+        listen 80;
+        server_name airbyte.local 127.0.0.7;
+        location / {
+            #127.0.0.11 internal Docker DNS.
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $airbyte "airbyte-webapp:80";
+            proxy_pass http://$airbyte;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+        }
+    }
+
 }
