added proxy for minio.

--- a/Docker/Y-Images/Y-Nginx /nginx.conf
+++ b/Docker/Y-Images/Y-Nginx /nginx.conf
@@ -26,7 +26,6 @@ http {
     keepalive_timeout  65;
 
     #gzip  on;
-
     #include /etc/nginx/conf.d/*.conf;
 
     server {
@@ -121,6 +120,19 @@ http {
             resolver 127.0.0.11 valid=10s ipv6=off;
             set $airbyte "airbyte-webapp:80";
             proxy_pass http://$airbyte;
+            proxy_http_version 1.1;
+            proxy_set_header Host $host;
+        }
+    }
+
+    server {
+        listen 80;
+        server_name minio.local 127.0.0.8;
+        location / {
+            #127.0.0.11 internal Docker DNS.
+            resolver 127.0.0.11 valid=10s ipv6=off;
+            set $minio "y-minio:9000";
+            proxy_pass http://$minio;
             proxy_http_version 1.1;
             proxy_set_header Host $host;
         }
